tests/reference/julia-subroutine2-b1f9ea8.stderr
style suggestion: Use 'end do' instead of 'enddo'
  --> tests/subroutine2.f90:75:1
   |
75 | enddo
   | ^^^^^ help: write this as 'end do'

semantic error: Subroutine already defined
 --> tests/subroutine2.f90:1:1 - 5:1
  |
1 |    subroutine g
  |    ^^^^^^^^^^^^...
...
  |
5 |    
  | ...^ 
